--- a/partials/home.html
+++ b/partials/home.html
@@ -1,3 +1,3 @@
-<div ng-controller="helloWorldCtrl" >
-    This text is on the homepage and the controller hellotext is {{helloWorldCtrl.helloText}}
+<div ng-controller="helloWorldCtrl as hello" >
+    This text is on the homepage and the controller hellotext is {{hello.helloText}}
 </div>
