hid embedded svg

--- a/partials/EV.html
+++ b/partials/EV.html
@@ -4,7 +4,7 @@
         <canvas resize="true" id="evCanvas"></canvas>
     </div>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="990px" id="y11"
-	 height="625px" viewBox="0 0 990 625" enable-background="new 0 0 990 625" xml:space="preserve">
+	 height="625px" viewBox="0 0 990 625" enable-background="new 0 0 990 625" xml:space="preserve" style="display: none">
 <g id="Background_Rectangle">
 	<rect fill="#FFFFFF" width="990" height="625"/>
 </g>
