forgot type on script ref

--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,6 +1,6 @@
 <div class="paperscript">
     <div class="canvas">
-        <script src="js/evScript.js" canvas="evCanvas"></script>
+        <script type="text/paperscript" src="js/evScript.js" canvas="evCanvas"></script>
         <canvas resize="true" id="evCanvas" width="990px" height="625px"></canvas>
     </div>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="990px" id="y11"
