--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,7 +1,7 @@
 <div class="paperscript">
     <div class="canvas">
         <script type="text/paperscript" src="js/evScript.js" canvas="evCanvas" id="paperscope-1" data-paper-ignore="true"></script>
-        <canvas resize="true" id="evCanvas" width="990px" height="625px"></canvas>
+        <canvas resize="true" id="evCanvas" width="990px" height="625px">
     </div>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="990px" id="y11"
 	 height="625px" viewBox="0 0 990 625" enable-background="new 0 0 990 625" xml:space="preserve" style="display: none">
