--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,6 +1,6 @@
 <div class="paperscript">
     <div class="canvas">
-        <script type="text/paperscript" canvas="evCanvas" >
+        <script type="text/paperscript" canvas="evCanvas" data-paper-loaded="true">
             var path = new Path();
             path.strokeColor = 'black';
             var start = new Point(100, 100);
