--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,5 +1,6 @@
 <div class="paperscript">
     <div class="canvas">
+        <script type="text/javascript" src="js/paper.js"></script>
         <script type="text/paperscript" canvas="evCanvas" data-paper-loaded="true">
             var path = new Path();
             path.strokeColor = 'black';
