--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,6 +1,6 @@
 <div class="paperscript">
-    <div class="canvas">
-        <canvas resize id="evCanvas"></canvas>
+    <div class="canvas" ng-keydown="" controller="ev">
+        <canvas resize id="evCanvas" ng-keydown="keyDown($event)"></canvas>
     </div>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="990px" id="y11"
 	 height="625px" viewBox="0 0 990 625" enable-background="new 0 0 990 625" xml:space="preserve" style="display: none">
