typo in controller reference

--- a/partials/EV.html
+++ b/partials/EV.html
@@ -1,5 +1,5 @@
 <div class="paperscript">
-    <div class="canvas" ng-keydown="" controller="ev">
+    <div class="canvas" ng-keydown="" ng-controller="evCtrl">
         <canvas resize id="evCanvas" ng-keydown="keyDown($event)"></canvas>
     </div>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="990px" id="y11"
